--- a/Gitrepos/Storyboards/Base.lproj/Main.storyboard
+++ b/Gitrepos/Storyboards/Base.lproj/Main.storyboard
@@ -79,10 +79,10 @@
             </objects>
             <point key="canvasLocation" x="9" y="639"/>
         </scene>
-        <!--View Controller-->
+        <!--Users View Controller-->
         <scene sceneID="iV9-Us-P7H">
             <objects>
-                <viewController id="XWp-Vb-q6v" sceneMemberID="viewController">
+                <viewController id="XWp-Vb-q6v" customClass="UsersViewController" customModule="Gitrepos" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="23W-eO-xNq">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -91,7 +91,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="blue" accessoryType="disclosureIndicator" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="UserCell" rowHeight="162" id="15R-nW-oOu">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="blue" accessoryType="disclosureIndicator" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="UserCell" rowHeight="162" id="15R-nW-oOu" customClass="UserCell" customModule="Gitrepos" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="162"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="15R-nW-oOu" id="6QI-1k-hhB">
@@ -104,12 +104,23 @@
                                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="lpm-9L-YiJ">
                                                             <rect key="frame" x="0.0" y="0.0" width="347" height="54"/>
                                                             <subviews>
-                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WcV-AN-9hz" userLabel="Avatar Image View">
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WcV-AN-9hz" userLabel="Avatar Image View" customClass="DesignableImageView" customModule="Gitrepos" customModuleProvider="target">
                                                                     <rect key="frame" x="0.0" y="0.0" width="54" height="54"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="54" id="KkG-Fy-0YW"/>
                                                                         <constraint firstAttribute="width" constant="54" id="Yyh-Kh-XRZ"/>
                                                                     </constraints>
+                                                                    <userDefinedRuntimeAttributes>
+                                                                        <userDefinedRuntimeAttribute type="number" keyPath="conerRadius">
+                                                                            <real key="value" value="27"/>
+                                                                        </userDefinedRuntimeAttribute>
+                                                                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                                            <color key="value" name="Medium Carmine"/>
+                                                                        </userDefinedRuntimeAttribute>
+                                                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                                            <real key="value" value="1"/>
+                                                                        </userDefinedRuntimeAttribute>
+                                                                    </userDefinedRuntimeAttributes>
                                                                 </imageView>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="NqH-DD-oJ4">
                                                                     <rect key="frame" x="70" y="0.0" width="277" height="54"/>
@@ -179,6 +190,14 @@
                                                 <constraint firstItem="4Uk-5l-iHw" firstAttribute="leading" secondItem="6QI-1k-hhB" secondAttribute="leading" constant="20" symbolic="YES" id="WJ3-IW-RO7"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="imageAvatar" destination="WcV-AN-9hz" id="rig-0K-Sm4"/>
+                                            <outlet property="labelBio" destination="Edn-nk-2SL" id="iqc-Zp-RZE"/>
+                                            <outlet property="labelLocation" destination="39n-eI-B6B" id="fwE-iu-L4h"/>
+                                            <outlet property="nameFull" destination="TgX-Nn-IMc" id="lmZ-Br-uzd"/>
+                                            <outlet property="nameUser" destination="m4G-0k-8Sh" id="zmG-3p-PvQ"/>
+                                            <outlet property="viewStack" destination="NqH-DD-oJ4" id="UDo-8L-6bV"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -193,6 +212,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="kib-zw-C5X"/>
+                    <connections>
+                        <outlet property="userTableView" destination="qpi-cc-wjG" id="sbl-nt-Mjd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RXB-kd-UCV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -215,11 +237,11 @@
             </objects>
             <point key="canvasLocation" x="665" y="639"/>
         </scene>
-        <!--Following-->
+        <!--User-->
         <scene sceneID="b8n-fx-ssF">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ISG-4v-soo" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Following" image="User" id="itN-Sl-bS1"/>
+                    <tabBarItem key="tabBarItem" title="User" image="User" id="itN-Sl-bS1"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="aZC-GQ-4x4">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -233,7 +255,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="6Mx-fp-BGg"/>
+        <segue reference="jfO-UA-JSY"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="Followers" width="30" height="30"/>
@@ -246,13 +268,13 @@
             <color red="0.28200000524520874" green="0.15700000524520874" blue="0.125" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Dusty Grey">
-            <color red="0.63137254901960782" green="0.59607843137254901" blue="0.58823529411764708" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.63099998235702515" green="0.59600001573562622" blue="0.58799999952316284" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Medium Carmine">
             <color red="0.7070000171661377" green="0.30000001192092896" blue="0.20499999821186066" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Rose White">
-            <color red="1" green="0.9882352941176471" blue="0.9882352941176471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.98799997568130493" blue="0.98799997568130493" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
