--- a/Gitrepos/Storyboards/Users.storyboard
+++ b/Gitrepos/Storyboards/Users.storyboard
@@ -12,7 +12,7 @@
         <!--Users View Controller-->
         <scene sceneID="bVZ-if-Thc">
             <objects>
-                <viewController id="aBB-EF-9Ic" customClass="UsersViewController" customModule="Gitrepos" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Users" id="aBB-EF-9Ic" customClass="UsersViewController" customModule="Gitrepos" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="PfR-Ai-auG">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -157,7 +157,7 @@
         <!--Profile-->
         <scene sceneID="cw0-Vp-mte">
             <objects>
-                <viewController id="19m-wG-8qc" customClass="ProfileViewController" customModule="Gitrepos" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Profile" id="19m-wG-8qc" customClass="ProfileViewController" customModule="Gitrepos" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="DTW-jz-E0P">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -345,27 +345,33 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="profileTableView" destination="erK-kO-YCi" id="P17-xC-ZFH"/>
+                        <segue destination="olR-at-TmW" kind="show" identifier="ShowUsers" id="bp2-Wf-IIB"/>
+                        <segue destination="3rP-fj-4S0" kind="show" identifier="ShowRepositories" id="ZUw-h7-Pia"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m0y-qK-b59" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1305.7971014492755" y="-152.00892857142856"/>
         </scene>
-        <!--Storyboard Reference-->
+        <!--Repositories-->
         <scene sceneID="Cx2-ZE-lgT">
             <objects>
-                <viewControllerPlaceholder id="3rP-fj-4S0" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="Repositories" id="3rP-fj-4S0" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="WTE-bu-p8v"/>
+                </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dot-nF-5LU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1254" y="317"/>
+            <point key="canvasLocation" x="1484" y="286"/>
         </scene>
-        <!--Storyboard Reference-->
+        <!--Users-->
         <scene sceneID="Exf-6A-Hql">
             <objects>
-                <viewControllerPlaceholder id="olR-at-TmW" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="Users" referencedIdentifier="Users" id="olR-at-TmW" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="IUW-Js-3kx"/>
+                </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4zK-HT-MQF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1886" y="336"/>
+            <point key="canvasLocation" x="1059" y="286"/>
         </scene>
         <!--Edit Profile-->
         <scene sceneID="RCu-cs-UUf">
@@ -411,7 +417,7 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </imageView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tiR-gr-U2g" customClass="PaddedButton" customModule="Gitrepos" customModuleProvider="target">
-                                                    <rect key="frame" x="154" y="81" width="110" height="31"/>
+                                                    <rect key="frame" x="168" y="83" width="82" height="27"/>
                                                     <color key="backgroundColor" name="Medium Carmine"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
                                                     <state key="normal" title="Change photo">
@@ -576,10 +582,10 @@
     </scenes>
     <designables>
         <designable name="6d9-yJ-IZV">
-            <size key="intrinsicContentSize" width="31.5" height="20.5"/>
+            <size key="intrinsicContentSize" width="15.5" height="14.5"/>
         </designable>
         <designable name="tiR-gr-U2g">
-            <size key="intrinsicContentSize" width="110" height="31"/>
+            <size key="intrinsicContentSize" width="82" height="27"/>
         </designable>
     </designables>
     <resources>
